--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@wojtekmaj/react-timerange-picker": "^3.0.0",
     "csv": "^3.1.0",
     "firebase": "^7.14.2",
     "react": "^16.13.1",
