--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # production
 /build
+/.firebase
+package-lock.json
 
 # misc
 .DS_Store
@@ -21,4 +23,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/.firebase
