--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /build
 .firebase
 .cache
+package-lock.json
 
 # misc
 .DS_Store
@@ -24,5 +25,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+*.log
 __pycache__
