--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,9 @@
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==3.0.9
 gcloud==0.17.0
 googleapis-common-protos==1.51.0
+googlemaps==4.4.2
 httplib2==0.18.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -19,4 +21,3 @@ requests-toolbelt==0.7.0
 rsa==4.0
 six==1.15.0
 Werkzeug==1.0.1
-googlemaps==4.4.2
