--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,10 +2,8 @@ FROM node:14
 
 WORKDIR /usr/src/app
 
-COPY package.json .
+COPY package*.json ./
 
 RUN npm install
-
-RUN npm install -g nodemon
 
 COPY . .
