--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.5.0",
+    "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
