--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.32.8",
