--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "chance": "^1.1.7",
+    "faker": "^5.4.0",
     "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.3.0",
     "react-dom": "^17.0.1",
-    "react-reveal": "^1.2.2",
     "react-icons": "^4.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.32.8",
