--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chance": "^1.1.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "faker": "^5.5.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
