--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "chance": "^1.1.7",
     "faker": "^5.4.0",
     "immer": "^8.0.1",
+    "lottie-react": "^2.1.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.5.0",
