--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.1",
     "chance": "^1.1.7",
     "cookie-parser": "~1.4.4",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
