--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chance": "^1.1.7",
     "faker": "^5.4.0",
+    "http-status-codes": "^2.1.4",
     "immer": "^8.0.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.1.0",
@@ -16,6 +18,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.3.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
@@ -48,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
