--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chance": "^1.1.7",
+    "csvtojson": "^2.0.10",
     "faker": "^5.4.0",
+    "firebase": "^8.4.2",
     "http-status-codes": "^2.1.4",
     "immer": "^8.0.1",
     "lodash": "^4.17.21",
