--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-icons": "^1.3.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
