--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "faker": "^5.5.2",
+    "firebase-admin": "^9.9.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
