--- a/api/package.json
+++ b/api/package.json
@@ -15,9 +15,9 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "faker": "^5.5.2",
-    "firebase-admin": "^9.9.0",
+    "firebase-admin": "^4.2.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7"
