--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "faker": "^5.4.0",
     "firebase": "^8.4.2",
     "http-status-codes": "^2.1.4",
-    "immer": "^8.0.1",
+    "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "lottie-react": "^2.1.0",
     "moment": "^2.29.1",
@@ -27,7 +27,7 @@
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "sass": "^1.32.8",
     "styled-components": "^5.2.1",
@@ -59,6 +59,10 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "jest-canvas-mock": "^2.3.1"
+    "jest-canvas-mock": "^2.3.1",
+    "react-error-overlay": "6.0.9"  
+  },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
   }
 }
