--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "firebase-admin": "^10.0.2",
     "http-errors": "~1.6.3",
     "jade": "^0.31.2",
+    "knex": "^1.0.3",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7"
   }
