fixed instructor row bug and button padding

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "async": "^3.2.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chance": "^1.1.7",
@@ -16,6 +17,7 @@
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "lottie-react": "^2.1.0",
+    "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
